# ontology-market-place-backend

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
functions/: add_ontologies.py  auth_utils.py  delete_ontologies.py  model_ontology.py  model_user.py  n4j.py  search_ontologies.py  tags.py  update_ontology.py  upload_ontology.py
